@@ -1,3 +1,7 @@
+2009-01-17  Roland McGrath  <roland@redhat.com>
+
+	* dwarf.h: Add DW_OP_GNU_push_tls_address, DW_OP_GNU_uninit.
+
 2009-01-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* dwarf_error.c: Always use __thread.  Remove all !USE_TLS code.
